--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                         info@devstudio.com</a>
                     </li>
                 </ul>
-                <ul class="mob-soc list">
+                <ul class="mob-soc-list list">
                     <li class="mob-soc__item">Instagram</li>
                     <li class="mob-soc__item">Twitter</li>
                     <li class="mob-soc__item">Facebook</li>
@@ -103,7 +103,9 @@
             <li class="portfolio__item pointer">
               <a href="#" class="portfolio__link link">
                 <div class="portfolio__thumb">
-                  <img src="images/img8.jpg" alt="Технокряк" width="370" />
+                  <img
+                    srcset="images/img8.jpg 1x , images/img8_2x 2x.jpg"
+                     src="images/img8.jpg" alt="Технокряк" width="370" />
                   <p class="portfolio-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
                 <div class="portfolio-card">
@@ -115,7 +117,9 @@
             <li class="portfolio__item pointer">
               <a href="#" class="portfolio__link link">
                 <div class="portfolio__thumb">
-                  <img src="images/img9.jpg" alt="Постер New Orlean vs Golden Star"
+                  <img
+                    srcset="images/img9.jpg 1x , images/img9_2x 2x.jpg"
+                     src="images/img9.jpg" alt="Постер New Orlean vs Golden Star"
                     width="370"/>
                   <p class="portfolio-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>  
                 </div>
@@ -132,7 +136,9 @@
             <li class="portfolio__item pointer">
               <a href="#" class="portfolio__link link">
                 <div class="portfolio__thumb">
-                  <img src="images/img10.jpg" alt="Ресторан Seafood" width="370" />
+                  <img
+                    srcset="images/img10.jpg 1x , images/img10_2x 2x.jpg"
+                     src="images/img10.jpg" alt="Ресторан Seafood" width="370" />
                   <p class="portfolio-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
                 <div class="portfolio-card">
@@ -146,7 +152,9 @@
             <li class="portfolio__item pointer">
               <a href="#" class="portfolio__link link">
                 <div class="portfolio__thumb">
-                  <img src="images/img11.jpg" alt="Проект Prime" width="370" />
+                  <img
+                    srcset="images/img11.jpg 1x , images/img11_2x 2x.jpg"
+                     src="images/img11.jpg" alt="Проект Prime" width="370" />
                   <p class="portfolio-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
                 <div class="portfolio-card">
@@ -158,7 +166,9 @@
             <li class="portfolio__item pointer">
               <a href="#" class="portfolio__link link">
                 <div class="portfolio__thumb">
-                  <img src="images/img12.jpg" alt="Проект Boxes" width="370" />
+                  <img
+                    srcset="images/img12.jpg 1x , images/img12_2x 2x.jpg"
+                     src="images/img12.jpg" alt="Проект Boxes" width="370" />
                   <p class="portfolio-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
               </div>
                 <div class="portfolio-card">
@@ -171,6 +181,7 @@
               <a href="#" class="portfolio__link link" >
                 <div class="portfolio__thumb">
                   <img
+                    srcset="images/img13.jpg 1x , images/img13_2x 2x.jpg"
                     src="images/img13.jpg"
                     alt="Inspiration has no Borders"
                     width="370"
@@ -189,6 +200,7 @@
               <a href="#" class="portfolio__link link">
                 <div class="portfolio__thumb">
                   <img
+                    srcset="images/img14.jpg 1x , images/img14_2x 2x.jpg"
                     src="images/img14.jpg"
                     alt="Издание Limited Edition"
                     width="370"/>
@@ -206,7 +218,9 @@
             <li class="portfolio__item pointer">
               <a href="" class="portfolio__link link">
                 <div class="portfolio__thumb">
-                  <img src="images/img15.jpg" alt="Проект LAB" width="370" />
+                  <img
+                    srcset="images/img15.jpg 1x , images/img15_2x 2x.jpg"
+                     src="images/img15.jpg" alt="Проект LAB" width="370" />
                   <p class="portfolio-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
                 <div class="portfolio-card">
@@ -218,7 +232,9 @@
             <li class="portfolio__item pointer">
               <a href="" class="portfolio__link link">
                 <div class="portfolio__thumb">
-                  <img src="images/img16.jpg" alt="Growing Business" width="370" />
+                  <img
+                    srcset="images/img16.jpg 1x , images/img16_2x 2x.jpg"
+                     src="images/img16.jpg" alt="Growing Business" width="370" />
                   <p class="portfolio-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                 </div>
                 <div class="portfolio-card">
