--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,8 @@
                     </svg>
                 </button>
                 <ul class="mob-nav__list list">
-                    <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link current link">Студия</a></li>
-                    <li class="mob-nav__item"><a href="./portfolio.html" class="mob-nav__link link">Портфолио</a></li>
+                    <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link link">Студия</a></li>
+                    <li class="mob-nav__item"><a href="./portfolio.html" class="mob-nav__link current link">Портфолио</a></li>
                     <li class="mob-nav__item"><a href="#" class="mob-nav__link link">Контакты</a></li>
                 </ul>
                 </div>
