--- a/index.html
+++ b/index.html
@@ -195,7 +195,29 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
             <li class="team__item">
-              <img src="images/img4.jpg" alt="Product Designer" width="270" />
+              <picture>
+                    <source
+                      srcset="images/img4.jpg 1x,
+                              images/img4_2x.jpg 2x"
+                      media="(min-width:1200px)"
+                    >
+                    <source
+                      srcset="images/img4_tab.jpg 1x,
+                              images/img4_tab_2x.jpg 2x"
+                      media="(min-width:768px)"
+                    >
+                    <source
+                      srcset="images/img4_mob.jpg 1x,
+                              images/img4_mob_2x.jpg 2x"
+                      media="(max-width:767px)"
+                    >
+                    <img
+                      src="images/img4_mob.jpg"
+                      alt="Product Designer"
+                      width="450"
+                      height="460"
+                    />
+                  </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Игорь Демьяненко</h3>
                 <p lang="en" class="team-card__profession">Product Designer</p>
@@ -232,12 +254,29 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                srcset="images/img5.jpg 1x , images/img5_2x 2x.jpg"
-                src="images/img5.jpg"
-                alt="Frontend Developer"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="images/img5.jpg 1x,
+                          images/img5_2x.jpg 2x"
+                  media="(min-width:1200px)"
+                >
+                <source
+                  srcset="images/img5_tab.jpg 1x,
+                          images/img5_tab_2x.jpg 2x"
+                  media="(min-width:768px)"
+                >
+                <source
+                  srcset="images/img5_mob.jpg 1x,
+                          images/img5_mob_2x.jpg 2x"
+                  media="(max-width:767px)"
+                >
+                <img
+                  src="images/img5_mob.jpg"
+                  alt="Frontend Developer"
+                  width="450"
+                  height="460"
+                />
+              </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Ольга Репина</h3>
                 <p lang="en" class="team-card__profession">Frontend Developer</p>
@@ -274,12 +313,29 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                srcset="images/img6.jpg 1x , images/img6_2x 2x.jpg"
-                src="images/img6.jpg"
-                alt="Marketing"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="images/img6.jpg 1x,
+                          images/img6_2x.jpg 2x"
+                  media="(min-width:1200px)"
+                >
+                <source
+                  srcset="images/img6_tab.jpg 1x,
+                          images/img6_tab_2x.jpg 2x"
+                  media="(min-width:768px)"
+                >
+                <source
+                  srcset="images/img6_mob.jpg 1x,
+                          images/img6_mob_2x.jpg 2x"
+                  media="(max-width:767px)"
+                >
+                <img
+                  src="images/img6_mob.jpg"
+                  alt="Marketing"
+                  width="450"
+                  height="460"
+                />
+              </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Николай Тарасов</h3>
                 <p lang="en" class="team-card__profession">Marketing</p>
@@ -316,12 +372,29 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                srcset="images/img7.jpg 1x , images/img7_2x 2x.jpg"
-                src="images/img7.jpg"
-                alt="UI Designer"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="images/img7.jpg 1x,
+                          images/img7_2x.jpg 2x"
+                  media="(min-width:1200px)"
+                >
+                <source
+                  srcset="images/img7_tab.jpg 1x,
+                          images/img7_tab_2x.jpg 2x"
+                  media="(min-width:768px)"
+                >
+                <source
+                  srcset="images/img7_mob.jpg 1x,
+                          images/img7_mob_2x.jpg 2x"
+                  media="(max-width:767px)"
+                >
+                <img
+                  src="images/img7_mob.jpg"
+                  alt="UI Designer"
+                  width="450"
+                  height="460"
+                />
+              </picture>
               <div class="team-card">
                 <h3 class="team-card__name">Михаил Ермаков</h3>
                 <p lang="en" class="team-card__profession">UI Designer</p>
